--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -124,7 +124,7 @@ l_{i}^2 = (a_{x} * r_{p} * c_{i} + b_{x}*r_{p}*s_{i}
 %\]
 \section{Base and Moving Platform}
  The Stewart platform should be stable. Thus the base will have a larger diameter than that of the moving platform. The Center of Gravity (COG) shouldn't fall outside the base during any of the platform movements.
-\subsection{Stewart Plaform Configurations}
+\subsection{Stewart Platform Configurations}
 Stewart platforms can take three primary configurations i.e. 3-3 type, 3-6 type or 6-6 type.
 \begin{center}
 	\begin{figure}[!h]
@@ -239,7 +239,7 @@ Stainless Steel & 7.5 - 8.0 & 215\\
 \hline
 \end{tabular}
 \end{center}
-Aluminum 6061 is preferable for the moving platform since it is lightweight and can withstand significant loads without yielding. It also has good machinability (50 per cent). A sheet metal of 1.5mm thickness will make a suitable platform to be used in wind tunnel testing.
+Aluminium 6061 is preferable for the moving platform since it is lightweight and can withstand significant loads without yielding. It also has good machinability (50 per cent). A sheet metal of 1.5mm thickness will make a suitable platform to be used in wind tunnel testing.
 \begin{center}
 	\begin{figure}[!h]
 	\centering
@@ -248,7 +248,7 @@ Aluminum 6061 is preferable for the moving platform since it is lightweight and 
 	\end{figure}
 \end{center}
 
-The moving platform has flanges to provide linking points of the Stewart Platform legs. A flange of 30mm is considered. This will allow ample space for the spherical joint (whose connecting side diameter is 10mm) to fit and to be well centered.
+The moving platform has flanges to provide linking points of the Stewart Platform legs. A flange of 30mm is considered. This will allow ample space for the spherical joint (whose connecting side diameter is 10mm) to fit and to be well centred.
 \begin{center}
 	\begin{figure}[!h]
 	\centering
@@ -276,7 +276,7 @@ Two options are considered:
 \end{itemize}
 Cylindrical bars are selected due to their ease of coupling with the available spherical joints. Cylindrical bars also guarantee uniform deformation of the bars - both in the axial and cross-sectional directions.
 
-From inquiries around suppliers in the Kenyan Market, these bars are usually available in steel and aluminum. In order to select the optimum solution for our application, the Yield Strength, modulus of rigidity, Young's Modulus and density of both materials will be considered. 
+From inquiries around suppliers in the Kenyan Market, these bars are usually available in steel and aluminium. In order to select the optimum solution for our application, the Yield Strength, modulus of rigidity, Young's Modulus and density of both materials will be considered. 
 \begin{table}[!h]
 \caption[Aluminium and Steel Properties]{Material Properties of Aluminium and Steel}
 \end{table}
@@ -294,11 +294,11 @@ Aluminium & 270 & 26 & 69 - 70 & 2.7\\
 E - Young's Modulus\\
 G - Modulus of Rigidity
 
-From $ \sigma = E \epsilon $, where $\sigma$ - Stress , E - Young's Modulus and $ \epsilon$ - Strain, materials with high values of Young Modulus will give smaller values of strain when subjected to a deforming force. Thus, aluminum rods will experience higher strains than steel rods.
+From $ \sigma = E \epsilon $, where $\sigma$ - Stress , E - Young's Modulus and $ \epsilon$ - Strain, materials with high values of Young Modulus will give smaller values of strain when subjected to a deforming force. Thus, aluminium rods will experience higher strains than steel rods.
 
-Materials with high modulus of rigidity will require huge amounts of force to deform. Aluminum rods will experience deformation under small amounts of force as compared to steel rods.
+Materials with high modulus of rigidity will require huge amounts of force to deform. Aluminium rods will experience deformation under small amounts of force as compared to steel rods.
 
-Aluminum rods have the capability of bearing higher loads before their deformation goes from elastic to plastic as compared to steel rods. Aluminum rods also have the benefit of being lightweight.
+Aluminium rods have the capability of bearing higher loads before their deformation goes from elastic to plastic as compared to steel rods. Aluminium rods also have the benefit of being lightweight.
 
 \subsection{Sensing Rods Design - Length}
 From the previously selected dimensions i.e diameter of platform, diameter of base and distance between the base and platform, the length of each rod can be determined by geometry.
@@ -325,7 +325,7 @@ If solid rods are used, strain gauges of high sensitivity should be used.
 	\begin{figure}[!h]
 	\centering
 	\includegraphics[width=0.8\linewidth]{Figures/Rod}
-	\caption[Aluminum rod]{Aluminum rod}
+	\caption[Aluminium rod]{Aluminium rod}
 	\end{figure}
 \end{center}
 
@@ -362,7 +362,7 @@ Spherical joints can be obtained from online stores. One such store is RS Compon
 \item Ball and socket joint M8
 \item Ball and socket joint M10
 \end{itemize}
-Based on the diameter of the available aluminum rods, Ball and socket joint M10 is selected.
+Based on the diameter of the available aluminium rods, Ball and socket joint M10 is selected.
 \begin{center}
 	\begin{figure}[!h]
 	\centering
@@ -418,7 +418,7 @@ This will provide the connection between the motor and the spherical joints henc
 \end{center}
 
 \subsection{Motor Selection}
-One parameter was considered in our motor selection i.e. torque required. From the Autodesk Inventor design environment, the mass of the moving platform and mechanical couplings was 2.6kg. Each motor is supposed to move a minimum mass of 0.177kg. Using a servo horn of distance 45mm center-to-center, and Distance = $ \pi $ D, then:
+One parameter was considered in our motor selection i.e. torque required. From the Autodesk Inventor design environment, the mass of the moving platform and mechanical couplings was 2.6kg. Each motor is supposed to move a minimum mass of 0.177kg. Using a servo horn of distance 45mm centre-to-centre, and Distance = $ \pi $ D, then:
 \begin{equation}
 Torque = (0.1777 \times 9.81)\times \frac{141.37}{1000} = 0.246 N\cdot m
 \end{equation}
@@ -475,10 +475,10 @@ Four strain gauges are required for each leg for a full Wheatstone bridge config
 	\end{figure}
 \end{center}
 In this case, as shown in figure 3.8.2, the load cells are able to measure the axial strain on each leg. R1 and R3 are active strain gauges measuring the compressive Poisson effect (–νe). R2 and R4 are active strain gages measuring the tensile strain (+e). The output generated from the Wheatstone bridge is then amplified and read to determine the strain on each leg.
-In the case of this project, a full bridge strain gauge sensor with each strain gauge orthagonally positoned allowing for elimination of noise and measurement of the strain axially on each rod is used.
+In the case of this project, a full bridge strain gauge sensor with each strain gauge orthogonally positioned allowing for elimination of noise and measurement of the strain axially on each rod is used.
 
 \paragraph{Force measurement Circuit}
-The output excitation of the Wheatstone bridge needs to be amplified as it results in low outputs. An analog to digital converter is also required for the analog to digital converter. Some considerable options are the HX711 or the AD7193 converters which may be used as digital to analog converters. The AD7193 is designed for high precision and has a delta sigma filter to remove noise from measurements.  However the AD7193 was not used due to it's high cost compared to the HX711 regardless of the advantage it offers with serial peripheral Interface communication allowing for multiple modules on the same bus.
+The output excitation of the Wheatstone bridge needs to be amplified as it results in low outputs. An analogue to digital converter is also required for the analogue to digital converter. Some considerable options are the HX711 or the AD7193 converters which may be used as digital to analogue converters. The AD7193 is designed for high precision and has a delta sigma filter to remove noise from measurements.  However the AD7193 was not used due to it's high cost compared to the HX711 regardless of the advantage it offers with serial peripheral Interface communication allowing for multiple modules on the same bus.
 
 The connection of the AD7193 to the microcontroller will be via Serial Peripheral Interface (SPI). The configuration is as shown in figure 3.8.3:
 \begin{center}
@@ -493,9 +493,9 @@ In this configuration the when the chip select of an amplifier is set to low, th
 The HX711 however allows for the I2C like communication via two wires (serial clock (SCL) and Serial Data (SDA)). They however do not have hardware addresses thus many pins are required for the interface, This can however be remedied by the use of a shared SCL between each of the amplifier modules reducing the overall number of pins required to interface.
 
 \paragraph{Force transformation matrix} 
-In such a case the forces experienced at the top of the platform are distributed between the 6 legs and as result, a force transformation matrix is required to resolve the forces apllied on each axis as measured by each load cell on each leg. 
+In such a case the forces experienced at the top of the platform are distributed between the 6 legs and as result, a force transformation matrix is required to resolve the forces applied on each axis as measured by each load cell on each leg. 
 
-If the platform is acted upon by an external wrench {$\vec{F}_e, \vec{M}_e$}, for static equilibrium of the body, the external wrench is statically balanced by the six leg forces of the stewart platform. Representing the unit vector $\hat{I}_i$ along the i-th leg with respect to B, the leg force is given  by $\hat{I}_if_i$. Considering the force equilibrium of the platform along  three mutually perpendicular directions in B(XYZ), the following force equations can be obtained as in \cite{dwarakanath_design_2001}:
+If the platform is acted upon by an external wrench {$\vec{F}_e, \vec{M}_e$}, for static equilibrium of the body, the external wrench is statically balanced by the six leg forces of the Stewart platform. Representing the unit vector $\hat{I}_i$ along the i-th leg with respect to B, the leg force is given  by $\hat{I}_if_i$. Considering the force equilibrium of the platform along  three mutually perpendicular directions in B(XYZ), the following force equations can be obtained as in \cite{dwarakanath_design_2001}:
 
 $(F_e)_x = f_1I_{1x} + f_2I_{2x} + f_3I_{3x} + f_4I_{4x} + f_5I_{5x} + f_6I_{6x}$
 
@@ -560,7 +560,7 @@ The general layout is as shown in the figure below:
 
 The primary interface between the microcontroller is via wirelessly via web sockets using User Datagram Protocol (UDP) interface. This allows for high speed low latency communication without need for a wired connection. It also allows for bidirectional transfer of information thus allowing for both control input and output of measured values. The interface is to enable the abstraction of data acquisition and actuator control to a simple interaction with buttons and other visual interfaces available in a computer program.
 
-The decoupling of the microcontroller and the program to be hosted on the desktop allows for advanced data processing such as application of filters and resolving measurements into usable information. It also allows for the use of more powerful processor and high level programming languages to more effectively perform complex calculations without taking a toll the sensor samping rate that would occur with on board processing in the microcontroller.
+The decoupling of the microcontroller and the program to be hosted on the desktop allows for advanced data processing such as application of filters and resolving measurements into usable information. It also allows for the use of more powerful processor and high level programming languages to more effectively perform complex calculations without taking a toll the sensor sampling rate that would occur with on board processing in the microcontroller.
 \begin{center}
 	\begin{figure}[!h]
 	\centering
@@ -577,11 +577,11 @@ The main requirement for this is the need for wireless communication via WIFI an
 	\begin{figure}[!h]
 	\centering
 	\includegraphics{Figures/mcu}
-	\caption[Microcotroller]{Microcontroller}
+	\caption[Microcontroller]{Microcontroller}
 	\end{figure}
 \end{center}
 
-\subsection{Power Suppply}
+\subsection{Power Supply}
 The power supply chosen is a AC/DC power converter. Since the highest voltage required is 12 volts. This also used as the highest power supply to the PCB.
 
 Both 5 and 3.3 volts are required in the PCB for other peripherals. To this end a buck converter and linear converter are used for 5 ad 3.3 volts respectively.
