--- a/interim-report/Files/Nomenclature.tex
+++ b/interim-report/Files/Nomenclature.tex
@@ -1,14 +1,14 @@
 \paragraph{Nomenclature}
 \begin{itemize}
 \item $\vec{b}_i$ - position of ith connection point at base with respect to B
-\item B - coordinate system defined at center of base plate
+\item B - coordinate system defined at centre of base plate
 \item COG - Center of Gravity
 \item DAQA - Data Acquisition System
 \item DOF - Degrees of Freedom
 \item UDP - User Datagram Protocol
 \item ELB - Engineering Laboratory Building
 \item $\vec{F}_e$ - external force applied to platform
-\item $f_i$ - force exterted on ith leg due $F_e, M_e$
+\item $f_i$ - force exerted on ith leg due $F_e, M_e$
 \item $F$ - vector of leg forces
 \item FEA - Finite Element Analysis
 \item $H$ - transformation matrix which related measured forces and applied forces
