--- a/interim-report/Files/Chapter2.tex
+++ b/interim-report/Files/Chapter2.tex
@@ -54,7 +54,7 @@ controller design
 A wind tunnel is a large tube with air moving inside. This movement of air is usually done by powerful fans. 
 
 The first wind tunnel was built by Francis Wenham in 1871. However, it was the Wright Brothers who were the first to show the value of the wind tunnel in aerodynamic design with their 1902 wind tunnel.  The Wright Brothers’ wind tunnel was largely made of wood, with a glass window on the top to look down through and see the force balance, from which the
-lift and drag forces could be read. The wind tunnel was powered by a fan driven off a natural gas fueled engine. Their tunnel was square of 16" by 16"(about 407mm by 407mm), and 6 foot long (about 1829mm), with a maximum test speed of 35 mph (about 56 km/h).
+lift and drag forces could be read. The wind tunnel was powered by a fan driven off a natural gas fuelled engine. Their tunnel was square of 16" by 16"(about 407mm by 407mm), and 6 foot long (about 1829mm), with a maximum test speed of 35 mph (about 56 km/h).
 \begin{center}
 	\begin{figure}[!h]
 	\centering
@@ -73,7 +73,7 @@ Today the largest wind tunnel in the world is the National Full-Scale Aerodynami
 \begin{figure}[!h]
 	\centering
 	\includegraphics{Figures/Fig3}
-	\caption[NASA Wind Tunnels]{NASA wind tunnels used to test new airplane designs \cite{NASA}}
+	\caption[NASA Wind Tunnels]{NASA wind tunnels used to test new air-plane designs \cite{NASA}}
 \end{figure}
 \end{center}
 
@@ -110,9 +110,9 @@ Several different types of external force balances are available for wind tunnel
 \end{center}
 In the wire balance, the model under testing is suspended by wires each connected to an extensometer (a sensor that produces an electrical output when submitted to a load and deforms). The shortcoming of the wire balance is the large tare drag caused by the wires which is difficult to quantify. They are also not robust nor versatile enough compared with the other alternatives. 
 
-The platform balance is relatively easy to construct, assemble and instrument. However, for this balance, forces and torques are coupled and the balance resolving center does not coincide with the center of the tunnel.
+The platform balance is relatively easy to construct, assemble and instrument. However, for this balance, forces and torques are coupled and the balance resolving centre does not coincide with the centre of the tunnel.
  
-In the yoke balance configuration, forces and torques are coupled and the balance resolving center coincides with the center of the tunnel. This configuration, however, presents some structural deflections due to the large span of the measuring and support arms.
+In the yoke balance configuration, forces and torques are coupled and the balance resolving centre coincides with the centre of the tunnel. This configuration, however, presents some structural deflections due to the large span of the measuring and support arms.
 
 The pyramidal balance configuration is a further improvement of the yoke balance in order to overcome the shortcomings of the other balances. It is capable of measuring six components of forces and
 torques separately and without coupling,provided that the balance is well assembled and calibrated.
@@ -129,7 +129,7 @@ The different kinds of internal balances can be made based on:
 	\caption[Internal force balances]{Typical configurations for internal force balances. \textit{Left to right:} Box balance and sting balance \cite{ferreira2015design}.}
 	\end{figure}
 \end{center}
-The box balance presents a cubic shape and can either be made of a solid piece of material or from assembled parts. In this configuation, the loads are transferred from the top to the bottom. The sting balance presents a cylindrical shape and the loads are transferred from one end to the other in the longitudinal direction. It can be used to measure forces or torques.
+The box balance presents a cubic shape and can either be made of a solid piece of material or from assembled parts. In this configuration, the loads are transferred from the top to the bottom. The sting balance presents a cylindrical shape and the loads are transferred from one end to the other in the longitudinal direction. It can be used to measure forces or torques.
 
 The advantage of internal force balances is that they minimize the interference caused by the supporting bars in the flow.
 \section{Sensors}
@@ -162,7 +162,7 @@ Angle of attack (\textalpha)- angle measured between the longitudinal axis of th
 	\end{figure}
 \end{center}
 \section{Summary of Gaps}
-With so much research in the area of Stewart platform, there remains still more work to be done in the areas of force control, dynamics, and singular positions. A 6 DOF Stewart platform with force measurement for a lowspeed wind tunnel has been done as final year project in JKUAT under the department of Mechatronic Engineering. Whereas the former team was able to successfully design and assemble the platform, as well as the actuatuation circuitry, there still remains work to do in the following areas \cite{caleb}:
+With so much research in the area of Stewart platform, there remains still more work to be done in the areas of force control, dynamics, and singular positions. A 6 DOF Stewart platform with force measurement for a low-speed wind tunnel has been done as final year project in JKUAT under the department of Mechatronic Engineering. Whereas the former team was able to successfully design and assemble the platform, as well as the actuation circuitry, there still remains work to do in the following areas \cite{caleb}:
 \begin{enumerate}
 \item Development of a Human-Machine-Interface for Stewart platform control.
 \item Data acquisition from sensors.
