--- a/interim-report/Files/Chapter5.tex
+++ b/interim-report/Files/Chapter5.tex
@@ -1,9 +1,9 @@
 \chapter{Conclusion}
 \begin{enumerate}
 \item A six-DOF Stewart platform has been designed. This platform can achieve 3 linear and 3 angular movements. It has a high quality index i.e. 0.86 and is therefore mechanically feasible.
-\item From Finite Element Analysis, the six legs of the Stewart platform experience significant strains which can be used to obtain force measurements during model testings in Wind Tunnel experiments.
+\item From Finite Element Analysis, the six legs of the Stewart platform experience significant strains which can be used to obtain force measurements during model testing in Wind Tunnel experiments.
 \item The flow velocity measurements have been designed and wind tunnel placement of the pitot tubes been demonstrated.
-\item The HMI has also been designed and programed only awaiting integration with the main electronics.
+\item The HMI has also been designed and programmed only awaiting integration with the main electronics.
 \end{enumerate}
 
 
