fix appendices TOC

--- a/interim-report/Files/Appendices.tex
+++ b/interim-report/Files/Appendices.tex
@@ -1,5 +1,6 @@
+\appendix
+\addcontentsline{toc}{chapter}{Appendices}
 \chapter*{\centering{Appendices}}
- \appendix
  \pagenumbering{roman}
  \chapter{Stewart Platform and Wind Tunnel Configurations}
  \includepdf[pages=-]{Wind Tunnel Assembly + Stewart}
