fix a some issues with compiling on vs code

--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -167,7 +167,7 @@
 %----  Bibliography  ----------------------------------------
 \markright{References}                               % Erzeugt Kopfzeile
 \addcontentsline{toc}{section}{References}            % Literaturverzeichnis ins Inhaltsverzeichnis
-\bibliographystyle{Bib/IEEEtran}
+%\bibliographystyle{Bib/IEEEtran}
 \bibliography{Bib/References}                         % BIBTeX
 \nocite{Lun01} 
 
