--- a/interim-report/Bib/References.bib
+++ b/interim-report/Bib/References.bib
@@ -177,16 +177,6 @@
   organization={IEEE}
 }
 
-@inproceedings{kang1996robust,
-  title={Robust tracking control of Stewart platform},
-  author={Kang, Ji-Yoon and Kim, Dong Hwan and Lee, Kyo-Il},
-  booktitle={Proceedings of 35th IEEE Conference on Decision and Control},
-  volume={3},
-  pages={3014--3019},
-  year={1996},
-  organization={IEEE}
-}
-
 @inproceedings{kim1998high,
   title={High speed tracking control of Stewart platform manipulator via enhanced sliding mode control},
   author={Kim, Nag-In and Lee, Chong-Won},
@@ -214,8 +204,7 @@
   pages={421--426},
   year={2006},
   organization={IEEE}
-=======
-% Encoding: UTF-8
+}
 
 @book{franklin_feedback_2002,
 	title = {Feedback control of dynamic systems},
@@ -329,32 +318,6 @@
 	file = {Stewart - 1965 - A Platform with Six Degrees of Freedom.pdf:C\:\\Users\\earls\\Zotero\\storage\\Q39VSCLJ\\Stewart - 1965 - A Platform with Six Degrees of Freedom.pdf:application/pdf},
 }
 
-@article{fernandes_design_nodate,
-	title = {Design of a Wind Tunnel Force Balance},
-	pages = {122},
-	author = {Fernandes, João Tiago Pinheiro},
-	langid = {english},
-	file = {Fernandes - Design of a Wind Tunnel Force Balance.pdf:C\:\\Users\\earls\\Zotero\\storage\\QBMQQSXN\\Fernandes - Design of a Wind Tunnel Force Balance.pdf:application/pdf},
-}
-
-
-@inproceedings{morris_force_2010,
-	location = {Louisville, Kentucky},
-	title = {Force Balance Design For Educational Wind Tunnels},
-	url = {http://peer.asee.org/15891},
-	doi = {10.18260/1-2--15891},
-	abstract = {A typical educational wind tunnel need only measure the lift and drag forces and be able to control the angle of attack of the mounted model. This paper presents a simple design for the balance apparatus to measure lift and drag. Two load cells are used in the apparatus, one to measure the vertical force (lift) and one to measure the horizontal force (drag). This can be used for aerodynamics studies of airplane and airfoil models, as well as ground vehicles such as trucks and cars. If desired, a third load cell can be added to enable measurements of the pitching moment. A linear actuator is used to change the angle of attack of plane and airfoil models. The actuator is mounted inside the force balance apparatus, using a parallel four-bar linkage so that the angle of attack is linearly related to the actuator position. The linear actuator can be controlled by a computer, and the lift, drag, and angle of attack data recorded on the same computer. This design is simple and easy to fabricate, can be added to an old wind tunnel in need of an upgrade or replacement or included as part of a new wind tunnel built from scratch. Complete details of the design including engineering drawings are included in the paper. The design is also low cost compared to commercial wind tunnel balances and gives sufficient accuracy for educational and some research purposes. A counterweight is used to mechanically zero the force readout. The new load balance has been tested and found accurate. It has sufficient precision to perform a sting drag measurement as well. A quick-connect mechanism is used for mounting and removing models.},
-	eventtitle = {2010 Annual Conference \& Exposition},
-	pages = {15.594.1--15.594.10},
-	booktitle = {2010 Annual Conference \& Exposition Proceedings},
-	publisher = {{ASEE} Conferences},
-	author = {Morris, Martin and Post, Scott},
-	urldate = {2022-05-25},
-	date = {2010-06},
-	langid = {english},
-	file = {Morris and Post - 2010 - Force Balance Design For Educational Wind Tunnels.pdf:C\:\\Users\\earls\\Zotero\\storage\\WZR5XJVY\\Morris and Post - 2010 - Force Balance Design For Educational Wind Tunnels.pdf:application/pdf},
-}
-
 
 @inproceedings{post_force_2010,
 	title = {Force balance design for educational wind tunnels},
@@ -440,7 +403,7 @@
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S1474667016397907},
 	doi = {10.3182/20080706-5-KR-1001.00897},
 	abstract = {The novelty of the paper lies in an extended nonlinear model for the Stewart platform with moving payload. The models found in the existing literature are most of the time only valid for static loads with symmetric configurations, as reflected by the presumed assumption on Moments of Inertia ({MOI}) being static and symmetric. Such assumption precludes a wide range of systems having asymmetric or moving payloads e.g. stabilized platforms used to stabilize satellite antenna trackers or surgical tables etc. In this paper the actual {MOI} of the Stabilizing Stewart platform with moving payload are computed and used to parameterize the extended nonlinear model. This model is subsequently used for designing sliding mode controller. The control performance of the proposed algorithm is verified with computer simulations. These simulations demonstrate better stability properties and performance of the proposed dynamic model with much lower uncertainty bounds, as compared to that of the controller designed on the prevalent nonlinear model.},
-	pages = {5324--5329},
+	pages = {5324-5329},
 	number = {2},
 	journaltitle = {{IFAC} Proceedings Volumes},
 	shortjournal = {{IFAC} Proceedings Volumes},
@@ -499,17 +462,6 @@
   publisher={University of Surrey}
 }
 
-@article{csumnu2017simulation,
-  title={Simulation and PID control of a Stewart platform with linear motor},
-  author={{\c{S}}umnu, Ahmet and G{\"u}zelbey, {\.I}brahim Halil and {\c{C}}akir, Mehmet Veysel},
-  journal={Journal of mechanical science and technology},
-  volume={31},
-  number={1},
-  pages={345--356},
-  year={2017},
-  publisher={Springer}
-}
-
 @misc{datasheet_spherical,
   title={RS PRO Steel M10 Ball and
 Socket Joint, 47mm x 47.5mm},
@@ -517,5 +469,3 @@ Socket Joint, 47mm x 47.5mm},
   year={2020},
   publisher={Datasheet}
 }
-
-Waichal, Prasanna. (2016). Re: How can I decide motor parameters in stewart platform with rotary actuator?. Retrieved from: https://www.researchgate.net/post/How_can_I_decide_motor_parameters_in_stewart_platform_with_rotary_actuator/56902fd05f7f71f70d8b4576/citation/download. 
