--- a/interim-report/Files/Abstract.tex
+++ b/interim-report/Files/Abstract.tex
@@ -7,13 +7,12 @@ Aerodynamic analysis of the performance of models within a wind tunnel is an imp
 Due to the complex manoeuvrers that may require simulation, there is a need for dynamic positioning of the model of the object in the wind tunnel. As a result, the design of a Stewart platform to replicate these complex manoeuvrers during wind tunnel tests as well as to position the model to obtain the required data.
 
 This project will look into the modelling, simulation and development of a Stewart
-platform based force balance for a low speed wind tunnel. The project will utilize
-MATLAB/Simulink for modelling and simulation, Autodesk Inventor for the mechanical
-design and Easy EDA for electrical circuits design. Six degree of freedom orientation of the platform is also demonstrated. 
+platform based force balance for a low speed wind tunnel. 
+Modelling and simulation of the kinematics of the stewart platform was done using MATLAB along with a simulation to visualize the movements. 
+The human machine interface dashboard was also created to allow interaction with the platform. The printed circuit board to be used was also designed using Easy EDA. Three dimensional models of the platform were drawn on inventor wo show the configuration allowing for six degrees of freedom which was verified by the simulation on MATLAB.
+
 Finally, models will be developed and tested in a wind tunnel to evaluate the performance
 of the platform. The force balance and platform should be able to position the test
 item and measure aerodynamic loads and air velocity as well as log the data using a bespoke computer program for further analysis.
-
-
 
 
