fix(objectives) remove first objective correct grammar

--- a/interim-report/Files/Introduction.tex
+++ b/interim-report/Files/Introduction.tex
@@ -21,12 +21,11 @@ Whereas the wind tunnel gives very accurate results, it is expensive to build an
 This project proposal presents the development of a 3-component external force moment-balance to stand as a simple and economical alternative to the existing commercial solutions. The force balance should be able to measure lift, drag and pitching moment in small models and will be used with a generic low speed wind tunnel which is already available. The proposal also presents the design of a six-degrees-of-freedom Stewart platform to simulate the different movements of objects.
 \section{Objectives}
 \subsection{Main Objective}
-\paragraph{} To develop an external Stewart platform force balance for a low speed wind tunnel. 
+\paragraph{} To develop a Stewart platform force balance and control system for a low speed wind tunnel. 
 \subsection{Specific Objectives}
 \begin{enumerate}
-\item To design and fabricate a six-degrees-of-freedom Stewart platform.
 \item To develop a force balance for the Stewart platform and obtain forces and moments during model testing.
-\item To measure flow velocity measurements in the wind tunnel by use of a pitot tube.
+\item To measure flow velocity in the wind tunnel by use of a pitot tube.
 \item To develop a Human-Machine Interface for measurement readings and control of the Stewart platform load balance.
 \end{enumerate}
 \section{Expected Outcomes}
