fix(expected outcomes)

--- a/interim-report/Files/Introduction.tex
+++ b/interim-report/Files/Introduction.tex
@@ -30,11 +30,9 @@ This project proposal presents the development of a 3-component external force m
 \end{enumerate}
 \section{Expected Outcomes}
 \begin{enumerate}
-\item A mechanically feasible Stewart platform with six degrees of freedom that positions a model
-within a wind tunnel.
 \item A functional force sensor for measuring the aerodynamic loads applied on a model
 and for calculating aerodynamic coefficients from the measurements taken.
-\item An improved velocity measurement system for the wind tunnel using pitot tubes.
+\item Velocity measurement system from the wind tunnel using pitot tubes.
 \item A human Machine Interface with access to control of the Stewart platform electronics
 and data acquisition from sensors.
 \end{enumerate}
