--- a/interim-report/Files/Abstract.tex
+++ b/interim-report/Files/Abstract.tex
@@ -4,15 +4,15 @@
 \section*{Abstract}
 \label{sec:Abstract}
 Aerodynamic analysis of the performance of models within a wind tunnel is an important step in the design of vehicles and aircraft. It is important to measure the aerodynamic performance in metrics such as drag and lift in comparison to simulations during design.
-Due to the complex manoeuvrers that may require simulation, there is a need for dynamic positioning of the model of the object in the wind tunnel. As a result, the design of a Stewart platform to replicate these complex manoeuvrers during wind tunnel tests as well as to position the model to obtain the required data.
+Due to the complex manoeuvres that may require simulation, there is a need for dynamic positioning of the model of the object in the wind tunnel. As a result, the design of a Stewart platform to replicate these complex manoeuvres during wind tunnel tests as well as to position the model to obtain the required data.
 
-This project will look into the modelling, simulation and development of a Stewart
-platform based force balance for a low speed wind tunnel. 
-Modelling and simulation of the kinematics of the stewart platform was done using MATLAB along with a simulation to visualize the movements. 
-The human machine interface dashboard was also created to allow interaction with the platform. The printed circuit board to be used was also designed using Easy EDA. Three dimensional models of the platform were drawn on inventor wo show the configuration allowing for six degrees of freedom which was verified by the simulation on MATLAB.
+The modelling, simulation and development of a Stewart platform
+based force balance for a low speed wind tunnel will be covered in this work. 
+Modelling and simulation of the kinematics of the Stewart platform was done using MATLAB along with a simulation to visualize the movements. 
+The human machine interface dashboard was also created to allow interaction with the platform. The printed circuit board to be used was also designed using Easy EDA. Three dimensional models of the platform were created using Autodesk Inventor to show the configuration allowing for six degrees of freedom which was verified by the simulation on MATLAB.
 
 Finally, models will be developed and tested in a wind tunnel to evaluate the performance
 of the platform. The force balance and platform should be able to position the test
-item and measure aerodynamic loads and air velocity as well as log the data using a bespoke computer program for further analysis.
+item and measure aerodynamic loads while pitot tubes will be used to measure air velocity. Data logging of the obtained measurements will be done using a bespoke computer program for further analysis.
 
 
