--- a/interim-report/Files/Introduction.tex
+++ b/interim-report/Files/Introduction.tex
@@ -2,37 +2,34 @@
 \label{sec:introduction}
 Obtaining and simulating the aerodynamic performance of items in a wind tunnel is a
 significant and important part in the development of vehicles, aircraft and other machines
-that require aerodynamic performance evaluation. Due to the complex manoeuvrers that
+that require aerodynamic performance evaluation. Due to the complex maneuvers that
 may require simulation, there is a need for dynamic positioning of the model of the object
 in the wind tunnel.
 \section{Background}
 A Stewart platform is a six degree-of-freedom mechanism that consists of a base and a platform connected with six legs that can vary in length. Each leg of the Stewart platform is connected to the ground by a two-axis joint and is provided with controllable means for extending its length
 \cite{wittenburg2016stewart}. The six DOF Stewart Platform provides an elegant design for simulating flight conditions.\cite{stewart1965platform}. 
 
-The Stewart platform can be used in conjunction with wind tunnels for wind tunnel testing. Wind tunnels are used to measure the aerodynamic forces on airplanes, wings, cars, trucks, bridges, and buildings. This can be done by mounting models of these vehicles on the tunnel's mounting sting. The Stewart platform can provide various dynamic positions to simulate complex vehicle manoeuvrers. A force balance is incorporated to take direct measurement of forces and torques acting on the model that is being tested in the wind tunnel.
+The Stewart platform can be used in conjunction with wind tunnels for wind tunnel testing. Wind tunnels are used to measure the aerodynamic forces on airplanes, wings, cars, trucks, bridges, and buildings. This can be done by mounting models of these vehicles on the tunnel's mounting sting. The Stewart platform can provide various dynamic positions to simulate complex vehicle maneuvers. A force balance is incorporated to take direct measurement of forces and torques acting on the model that is being tested in the wind tunnel.
 
-For this project, the force balance is intended to be built as simple and accessible as possible. Thus, use of a six DOF Stewart Platform as a force balance. Electrical load measurement devices have to be connected to the legs of the Stewart platform in order to measure and obtain the results and so making it fully operational.
+For this project, the force balance is intended to be built as simple and accessible as possible. Thus, use of a six DOF Stewart Platform as a force balance. A Stewart Platform has already been designed and fabricated by a previous group but is not integrated with a force balance. Electrical load measurement devices have to be connected to the legs of the Stewart platform in order to measure and obtain the results and so making it fully operational.
 
-\section{Problem Statement}
+\section{Problem Environment}
 Simulation and analysis of scaled models is an important step in the development of aircraft, vehicles and other machines. Such analysis provides aerodynamic performance data that can be used to inform any modifications or improvements e.g. in aircraft and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel used in conjunction with sensors for data acquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to predict behaviour of vehicles and aircraft in the actual environment.
 
-Whereas the wind tunnel gives very accurate results, it is expensive to build and use. Also, some objects require complex manoeuvrer simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
-
-This project proposal presents the development of a 3-component external force moment-balance to stand as a simple and economical alternative to the existing commercial solutions. The force balance should be able to measure lift, drag and pitching moment in small models and will be used with a generic low speed wind tunnel which is already available. The proposal also presents the design of a six-degrees-of-freedom Stewart platform to simulate the different movements of objects.
+Whereas the wind tunnel gives very accurate results, it is expensive to build and use. Also, some objects require complex maneuver simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
+\section{Problem Statement}
+ The development of a six DOF Stewart Platform force balance to stand as a simple and economical alternative to the existing commercial solutions is presented. The Stewart platform force balance should be able to measure lift, drag and pitching moment in small models and will be used with a generic low speed wind tunnel which is already available at the Engineering Fluids LAB in JKUAT.
 \section{Objectives}
 \subsection{Main Objective}
-\paragraph{} To develop an external Stewart platform force balance for a low speed wind tunnel. 
+\paragraph{} To develop a Stewart platform force balance and a control system for the Stewart platform. 
 \subsection{Specific Objectives}
 \begin{enumerate}
-\item To design and fabricate a six-degrees-of-freedom Stewart platform.
 \item To develop a force balance for the Stewart platform and obtain forces and moments during model testing.
-\item To measure flow velocity measurements in the wind tunnel by use of a pitot tube.
+\item To obtain flow velocity measurements in the wind tunnel by use of pitot tubes.
 \item To develop a Human-Machine Interface for measurement readings and control of the Stewart platform load balance.
 \end{enumerate}
 \section{Expected Outcomes}
 \begin{enumerate}
-\item A mechanically feasible Stewart platform with six degrees of freedom that positions a model
-within a wind tunnel.
 \item A functional force sensor for measuring the aerodynamic loads applied on a model
 and for calculating aerodynamic coefficients from the measurements taken.
 \item An improved velocity measurement system for the wind tunnel using pitot tubes.
