--- a/interim-report/Bib/References.bib
+++ b/interim-report/Bib/References.bib
@@ -469,3 +469,10 @@ Socket Joint, 47mm x 47.5mm},
   year={2020},
   publisher={Datasheet}
 }
+
+@phdthesis{bueno2018design,
+  title={Design of a Three-axis Wind Tunnel Force Balance},
+  author={Bueno Tintor{\'e}, Itziar},
+  year={2018},
+  school={University of Zagreb. Faculty of Transport and Traffic Sciences. Division of~…}
+}
