--- a/interim-report/Files/Chapter2.tex
+++ b/interim-report/Files/Chapter2.tex
@@ -1,6 +1,42 @@
 \chapter{Literature Review}
+\section{Wind Tunnel}
+A wind tunnel is a large tube with air moving inside. This movement of air is usually done by powerful fans.
+\begin{center}
+	\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=0.7\linewidth]{Figures/Fig2}
+	\caption[A Typical Wind Tunnel]{Diagram of a typical wind tunnel \cite{morris_force_2010}}
+	\end{figure}
+\end{center} 
+The first wind tunnel was built by Francis Wenham in 1871. However, it was the Wright Brothers who were the first to show the value of the wind tunnel in aerodynamic design with their 1902 wind tunnel. The Wright Brothers’ wind tunnel was largely made of wood, with a glass window on the top to look down through and see the force balance, from which the
+lift and drag forces could be read. The wind tunnel was powered by a fan driven off a natural gas fueled engine. Their tunnel was square of 16" by 16"(about 407mm by 407mm), and 6 foot long (about 1829mm), with a maximum test speed of 35 mph (about 56 km/h)\cite{morris_force_2010}.
+
+
+Later in the early 20th century in Europe, the main users of wind tunnels were Gustave Eiffel in France and Ludwig Prandtl in Germany. Prandtl built the first closed circuit wind tunnel in 1908. Closed circuit wind tunnels are characterized by the recirculation of the airflow with very minimal exchange with the exterior. Open circuit wind tunnels on the other hand, have an airflow that follows a straight path and flows to the contracted zone where the test section is located and then passes through a diffuser, a fan section and an exhaust.
+
+By the 1940’s supersonic wind tunnels were in use. In 1972, a cryogenic wind tunnel was built at NASA Langley by injecting liquid nitrogen into the wind tunnel to cool the gas. This lowered the viscosity and increased the Reynolds number, and this tunnel had the capability to match Reynolds and Mach numbers simultaneously up to Mach 1.2
+\cite{fernandes_design_nodate}.
+
+Today the largest wind tunnel in the world is the National Full-Scale Aerodynamics Complex at NASA's Ames Research Center, which has a test section of cross-section 80 ft by 100 ft (24 m x 31 m). The types of instruments in common use in wind tunnels include boundary layer rakes, tufts, pitot tubes, pressure sensitive paint, smoke, and static pressure taps \cite{morris_force_2010}.
+\begin{center}
+\begin{figure}[!h]
+	\centering
+	\includegraphics{Figures/Fig3}
+	\caption[NASA Wind Tunnels]{NASA wind tunnels used to test new air-plane designs \cite{NASA}}
+\end{figure}
+\end{center}
+
+NASA uses wind tunnels to test scale models of aircraft and spacecraft. Wind tunnels help NASA to test ideas of making airplanes better and safer. They are also used to help engineers in designing spacecraft that will work in other planets such as mars - the wind tunnel can be used to simulate objects in an atmosphere that's thinner than ours e.g. an atmosphere that's exactly like the Martian atmosphere. NASA has wind tunnels of different types and sizes. Some are low-speed wind tunnels, others are hypersonic i.e. they are made to carry out tests at 4,000 mph (6437 kph) \cite{NASA}.
+\begin{center}
+     %&\vspace*{-4.0cm}
+    \begin{figure}[!h]
+\centering
+\includegraphics{Figures/Fig4}
+\caption[NASA Wind tunnel - space application]{NASA wind tunnels used to test the design of heavy-lift rocket \cite{NASA}}
+\end{figure}
+\end{center}
 \section{Stewart Platform}
-Parallel link manipulators have become an important area of research due to their: precision, rigidity and high-load-to-weight ratio. These manipulators find practical applications in flight simulators, precise machining and applications that require disturbance isolation. \cite{iqbal_dynamic_2008}. The Stewart platform is an example of a parallel manipulator.
+Parallel link manipulators have become an important area of research due to their: precision, rigidity and high-load-to-weight ratio. These manipulators find practical applications in flight simulators, precise machining and applications that require disturbance isolation \cite{iqbal_dynamic_2008}. The Stewart platform is an example of a parallel manipulator.
 
 A Stewart platform is a parallel manipulator that provides six-degree-of-freedom (DOF) i.e. roll, pitch, yaw, surge, sway and heave, and can be controlled in all these freedoms simultaneously. The platform consists six variable-length electro-mechanical actuators connecting a top plate to a base plate with spherical joints.
 
@@ -9,7 +45,7 @@ respect to the base plate is achieved by reducing or extending the actuator leng
 
 Each leg of the mechanism is connected to the ground by a two-axis joint where: One of these axes is
 normal to the leg and is provided with a means for control whereas, the other axis is normal to the first and is not provided with a means for control.
-Each leg also has controllable means for extending its length. These control means include:
+Each leg also has controllable means for extending its length. These control means include \cite{stewart1965platform}:
 \begin{enumerate}
 \item Use of hydraulic jacks.
 \item Screw jacks - This gives give the advantage of
@@ -50,49 +86,14 @@ controller design
 \cite{iqbal2006direct}.
 \end{enumerate}
 
-\subsection{Wind Tunnel}
-A wind tunnel is a large tube with air moving inside. This movement of air is usually done by powerful fans. 
 
-The first wind tunnel was built by Francis Wenham in 1871. However, it was the Wright Brothers who were the first to show the value of the wind tunnel in aerodynamic design with their 1902 wind tunnel.  The Wright Brothers’ wind tunnel was largely made of wood, with a glass window on the top to look down through and see the force balance, from which the
-lift and drag forces could be read. The wind tunnel was powered by a fan driven off a natural gas fuelled engine. Their tunnel was square of 16" by 16"(about 407mm by 407mm), and 6 foot long (about 1829mm), with a maximum test speed of 35 mph (about 56 km/h).
-\begin{center}
-	\begin{figure}[!h]
-	\centering
-	\includegraphics[width=0.75\linewidth]{Figures/Fig2}
-	\caption[A Typical Wind Tunnel]{Diagram of a typical wind tunnel \cite{morris_force_2010}}
-	\end{figure}
-\end{center}
-
-Later in the early 20th century in Europe, the main users of wind tunnels were Gustave Eiffel in France and Ludwig Prandtl in Germany. Prandtl built the first closed circuit wind tunnel in 1908. Closed circuit wind tunnels are characterized by the recirculation of the airflow with very minimal exchange with the exterior. Open circuit wind tunnels on the other hand, have an airflow that follows a straight path and flows to the contracted zone where the test section is located and then passes through a diffuser, a fan section and an exhaust.
-
-By the 1940’s supersonic wind tunnels were in use. In 1972 a cryogenic wind tunnel was built at NASA Langley by injecting liquid nitrogen into the wind tunnel to cool the gas. This lowered the viscosity and increased the Reynolds number, and this tunnel had the capability to match Reynolds and Mach numbers simultaneously up to Mach 1.2
-\cite{fernandes_design_nodate}.
-
-Today the largest wind tunnel in the world is the National Full-Scale Aerodynamics Complex at NASA's Ames Research Center, which has a test section of cross-section 80 ft by 100 ft (24 m x 31 m). The types of instruments in common use in wind tunnels include boundary layer rakes, tufts, pitot tubes, pressure sensitive paint, smoke, and static pressure taps \cite{morris_force_2010}.
-\begin{center}
-\begin{figure}[!h]
-	\centering
-	\includegraphics{Figures/Fig3}
-	\caption[NASA Wind Tunnels]{NASA wind tunnels used to test new air-plane designs \cite{NASA}}
-\end{figure}
-\end{center}
-
-NASA uses wind tunnels to test scale models of aircraft and spacecraft. Wind tunnels help NASA to test ideas of making airplanes better and safer. They are also used to help engineers in designing spacecraft that will work in other planets such as mars - the wind tunnel can be used to simulate objects in an atmosphere that's thinner than ours e.g. an atmosphere that's exactly like the Martian atmosphere. NASA has wind tunnels of different types and sizes. Some are low-speed wind tunnels, others are hypersonic i.e. they are made to carry out tests at 4,000 mph (6437 kph) \cite{NASA}.
-\begin{center}
-     %&\vspace*{-4.0cm}
-    \begin{figure}[!h]
-\centering
-\includegraphics{Figures/Fig4}
-\caption[NASA Wind tunnel - space application]{NASA wind tunnels used to test the design of heavy-lift rocket \cite{NASA}}
-\end{figure}
-\end{center}
 \section{Force Balances}
-For wind tunnel applications, the wind axes is used as the reference frame. Where, X axis points to the accelerated air; Z axis points downward and; Y axis points to the right in the direction of the wind. In the reference frame above, lift is in the negative z-direction, drag in the negative x-direction and, side force in the negative y-direction.
+For wind tunnel applications, the wind axes is used as the reference frame. Where, X axis points to the accelerated air; Z axis points downward and; Y axis points to the right in the direction of the wind. In the reference frame above, lift is in the negative z-direction, drag in the negative x-direction and, side force in the negative y-direction \cite{bueno2018design}.
 
 Moment components on the x,y,z axes are rolling moment, pitching moment and yawing moment respectively. A three-component force balance can be considered to measure the lift, drag and pitch (angle of attack).
 
 Force balances can be external or internal. In external force balances the test section lies outside of the wind tunnel test section, whereas in internal force balances the balance is inside the model itself connecting the model to the support structure.
-
+\subsection{External Force Balances}
 Several different types of external force balances are available for wind tunnel use
 \cite{morris_force_2010}:
 \begin{enumerate}
@@ -108,7 +109,7 @@ Several different types of external force balances are available for wind tunnel
 	\caption[External Force balances]{Typical configurations for external force balances \cite{ferreira2015design}}
 	\end{figure}
 \end{center}
-In the wire balance, the model under testing is suspended by wires each connected to an extensometer (a sensor that produces an electrical output when submitted to a load and deforms). The shortcoming of the wire balance is the large tare drag caused by the wires which is difficult to quantify. They are also not robust nor versatile enough compared with the other alternatives. 
+In the wire balance, the model under testing is suspended by wires each connected to an extensometer (a sensor that produces an electrical output when submitted to a load and deforms). The shortcoming of the wire balance is the large tare drag caused by the wires which is difficult to quantify. They are also not robust nor versatile enough compared with the other alternatives \cite{ferreira2015design}. 
 
 The platform balance is relatively easy to construct, assemble and instrument. However, for this balance, forces and torques are coupled and the balance resolving centre does not coincide with the centre of the tunnel.
  
@@ -117,7 +118,31 @@ In the yoke balance configuration, forces and torques are coupled and the balanc
 The pyramidal balance configuration is a further improvement of the yoke balance in order to overcome the shortcomings of the other balances. It is capable of measuring six components of forces and
 torques separately and without coupling,provided that the balance is well assembled and calibrated.
 
-The different kinds of internal balances can be made based on:
+It is possible to merge some of the force balance concepts to come up with an innovative, easy-to-manufacture and cost-effective external force balance. One such solution can be the use of a Stewart platform as a force balance. The Stewart platform offers another advantage - dynamic positioning of the model in the test section.
+The platform bars are subjected to axial forces only and can have strain-gauges coupled to each one as Wheatstone briges. Forces and torques are themn obtained based on the axial displacements obtained by the strain gauges\cite{fernandes_design_nodate}.
+\begin{center}
+\begin{table}[!htb]
+\caption[Comparison of Force Balances]{A Table of Comparison and Contrast of External Force Balances}
+\end{table}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{Type} & \textbf{Advantages} & \textbf{Disadvantages}\\
+\hline
+Wire & Relatively simple construction & large tare drag\\
+ & & Less Versatile and robust\\
+ \hline
+Platform & Easy consruction and instrumentation & Force and torques coupled\\
+ & & Center alignment difficulties\\
+ \hline
+ Yoke & Overcomes center alignment problems & Structural deflections\\
+ \hline
+ Pyramidal & Overcomes shortcoming of other balances & \\
+ & Measures 6 components of forces and torques & \\
+ \hline 
+\end{tabular}
+\end{center}
+\subsection{Internal Force Balances}
+The different kinds of internal balances can be made based on \cite{ferreira2015design}:
 \begin{enumerate}
 \item The type of transducer i.e. strain gauge or piezoelectric balance.
 \item Shape i.e. box balance and sting balance
@@ -134,14 +159,14 @@ The box balance presents a cubic shape and can either be made of a solid piece o
 The advantage of internal force balances is that they minimize the interference caused by the supporting bars in the flow.
 \section{Sensors}
 \subsection{Load Sensors}
-Several methods can be used to measure forces and torques in a force balance. These methods can be generally grouped into two:
+Several methods can be used to measure forces and torques in a force balance. These methods can be generally grouped into two\cite{ferreira2015design}:
 \begin{enumerate}
 \item Hydraulic measuring techniques.
 \item Electric measurement techniques.
 \end{enumerate}
 Electric measurement techniques are preferred for Force balance applications. One such electric measurement device is the strain gauge. A strain gauge is an electromechanical device whose electrical resistance changes linearly with the strain in the component.
 
-Metal foil strain gauges are widely used. This type of strain gauge provide more precise strain values than wire strain gauges. However, since the relative changes on electric resistance of the strain gauge are so small, it is necessary to develop an effective method to measure them because each strain gauge would require extremely accurate signal measurements. The solution is to have a set of strain gauges coupled in order to minimize the required accuracy, forming a force transducer i.e. the \textit{Wheatstone bridge}.
+Metal foil strain gauges are widely used. This type of strain gauges provide more precise strain values than wire strain gauges. However, since the relative changes on electric resistance of the strain gauge are so small, it is necessary to develop an effective method of measuring them because each strain gauge would require extremely accurate signal measurements. The solution is to have a set of strain gauges coupled in order to minimize the required accuracy, forming a force transducer i.e. the \textit{Wheatstone bridge}.
 \begin{center}
 		\begin{figure}[!h]
 		\centering
@@ -149,7 +174,7 @@ Metal foil strain gauges are widely used. This type of strain gauge provide more
 		\caption[Wheatstone Bridge Circuit]{Wheatstone Bridge Circuit \cite{ferreira2015design}}
 		\end{figure}
 \end{center}
-Load cells can also be used to measure the drag and lift forces.
+Load cells can also be used to measure the drag and lift forces\cite{ferreira2015design}.
 \subsection{Attitude Sensor}
 It is important to define the desired aerodynamic angles and to guarantee that they are measured accurately in relation to the air stream. One such angle is the angle of attack (\textalpha) shown in Figure 2.4. For this reason, specific devices that provide the attitude measurement should be implemented in order to improve the precision of the results.
 
