--- a/interim-report/Files/Introduction.tex
+++ b/interim-report/Files/Introduction.tex
@@ -11,28 +11,28 @@ A Stewart platform is a six degree-of-freedom mechanism that consists of a base 
 
 The Stewart platform can be used in conjunction with wind tunnels for wind tunnel testing. Wind tunnels are used to measure the aerodynamic forces on airplanes, wings, cars, trucks, bridges, and buildings. This can be done by mounting models of these vehicles on the tunnel's mounting sting. The Stewart platform can provide various dynamic positions to simulate complex vehicle manoeuvrers. A force balance is incorporated to take direct measurement of forces and torques acting on the model that is being tested in the wind tunnel.
 
-For this project, the force balance is intended to be built as simple and accessible as possible. Thus, use of a six DOF Stewart Platform as a force balance. Electrical load measurement devices have to be connected to the legs of the Stewart platform in order to measure and obtain the results and so making it fully operational.
+For this project, the force balance is intended to be built as simple and accessible as possible. Thus, use of a six DOF Stewart Platform as a force balance. A Stewart Platform has already been designed and fabricated by a previous group but is not integrated with a force balance. Electrical load measurement devices have to be connected to the legs of the Stewart platform in order to measure and obtain the results and so making it fully operational.
 
-\section{Problem Statement}
+\section{Problem EnvironStatement}
 Simulation and analysis of scaled models is an important step in the development of aircraft, vehicles and other machines. Such analysis provides aerodynamic performance data that can be used to inform any modifications or improvements e.g. in aircraft and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel used in conjunction with sensors for data acquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to predict behaviour of vehicles and aircraft in the actual environment.
 
 Whereas the wind tunnel gives very accurate results, it is expensive to build and use. Also, some objects require complex manoeuvrer simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
-
-This project proposal presents the development of a 3-component external force moment-balance to stand as a simple and economical alternative to the existing commercial solutions. The force balance should be able to measure lift, drag and pitching moment in small models and will be used with a generic low speed wind tunnel which is already available. The proposal also presents the design of a six-degrees-of-freedom Stewart platform to simulate the different movements of objects.
+\section{Problem Statement}
+ The development of a six DOF Stewart Platform force balance to stand as a simple and economical alternative to the existing commercial solutions is presented. The Stewart platform. The force balance should be able to measure lift, drag and pitching moment in small models and will be used with a generic low speed wind tunnel which is already available at the Engineering Fluids LAB in JKUAT. The proposal also presents the design of a six-degrees-of-freedom Stewart platform to simulate the different movements of objects.
 \section{Objectives}
 \subsection{Main Objective}
-\paragraph{} To develop a Stewart platform force balance and control system for a low speed wind tunnel. 
+\paragraph{} To develop a Stewart platform force balance and a control system for the Stewart platforma low speed wind tunnel. 
 \subsection{Specific Objectives}
 \begin{enumerate}
 \item To develop a force balance for the Stewart platform and obtain forces and moments during model testing.
-\item To measure flow velocity in the wind tunnel by use of a pitot tube.
+\item To obtainmeasure flow velocity measurements in the wind tunnel by use of a pitot tubes.
 \item To develop a Human-Machine Interface for measurement readings and control of the Stewart platform load balance.
 \end{enumerate}
 \section{Expected Outcomes}
 \begin{enumerate}
-\item A functional force sensor for measuring the aerodynamic loads applied on a model
+\item A functional force balancesensor for measuring the aerodynamic loads applied on a model
 and for calculating aerodynamic coefficients from the measurements taken.
-\item Velocity measurement system from the wind tunnel using pitot tubes.
+\item A vVelocity measurement system forom the wind tunnel using pitot tubes.
 \item A human Machine Interface with access to control of the Stewart platform electronics
 and data acquisition from sensors.
 \end{enumerate}
